[gd_scene load_steps=5 format=3 uid="uid://bpdidtl6tvpva"]

[ext_resource type="Script" uid="uid://bji2reaby4b1p" path="res://systems/special_attack.gd" id="1_yeiqa"]

[sub_resource type="SphereShape3D" id="SphereShape3D_th5wm"]
radius = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_th5wm"]
transparency = 1
albedo_color = Color(0.8862745, 0.22745098, 0.8745098, 0.21568628)

[sub_resource type="SphereMesh" id="SphereMesh_okvm0"]
material = SubResource("StandardMaterial3D_th5wm")
radius = 4.0
height = 8.0

[node name="SpecialAttack" type="Area3D"]
collision_layer = 16
collision_mask = 4
script = ExtResource("1_yeiqa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_th5wm")
debug_fill = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_okvm0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
